--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/ruhland-xml/vorlesung08#readme",
   "dependencies": {
+    "bs58": "^5.0.0",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.7.0",
+    "talisman": "^1.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
